[gd_scene load_steps=3 format=3 uid="uid://dh55ravtkfott"]

[ext_resource type="Script" path="res://ui/menus/debug_menu.gd" id="1"]
[ext_resource type="Theme" uid="uid://cyhvn15bum0yy" path="res://assets/themes/main_theme.tres" id="3"]

[node name="DebugMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("3")
script = ExtResource("1")

[node name="NinePatchRect" type="NinePatchRect" parent="."]
self_modulate = Color(1, 1, 1, 0.141176)
layout_mode = 0
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_horizontal = 3
size_flags_vertical = 3
region_rect = Rect2(0, 0, 32, 32)
patch_margin_left = 15
patch_margin_top = 15
patch_margin_right = 15
patch_margin_bottom = 15

[node name="MarginContainer" type="MarginContainer" parent="NinePatchRect"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -74.5
offset_top = -60.0
offset_right = 74.5
offset_bottom = 60.0
grow_horizontal = 2
grow_vertical = 2

[node name="GridContainer" type="GridContainer" parent="NinePatchRect/MarginContainer"]
layout_mode = 2

[node name="ToggleInvincible" type="Button" parent="NinePatchRect/MarginContainer/GridContainer"]
layout_mode = 2
toggle_mode = true
text = "Invincibility"

[node name="SpawnSlug" type="Button" parent="NinePatchRect/MarginContainer/GridContainer"]
layout_mode = 2
text = "Spawn Slug"

[node name="CreateEnhancement" type="Button" parent="NinePatchRect/MarginContainer/GridContainer"]
layout_mode = 2
text = "Create Enhancement"

[node name="AddScrap" type="Button" parent="NinePatchRect/MarginContainer/GridContainer"]
layout_mode = 2
text = "Add Scrap"

[connection signal="toggled" from="NinePatchRect/MarginContainer/GridContainer/ToggleInvincible" to="." method="_on_ToggleInvincible_toggled"]
[connection signal="pressed" from="NinePatchRect/MarginContainer/GridContainer/SpawnSlug" to="." method="_on_SpawnSlug_pressed"]
[connection signal="pressed" from="NinePatchRect/MarginContainer/GridContainer/CreateEnhancement" to="." method="_on_CreateEnhancement_pressed"]
[connection signal="pressed" from="NinePatchRect/MarginContainer/GridContainer/AddScrap" to="." method="_on_add_scrap_pressed"]
